# cusage-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.ralph/: iteration-1-audit-layout-pricing.md  iteration-1-layout-pricing-audit.md  layout-pricing-audit-iteration1.md  layout-pricing-audit.md  ralph-history.json  ralph-loop.state.json  ralph-tasks.md
docs/: architecture-notes.md  parity-inventory.md
plans/: m1-bootstrap-and-contract-harness.md
prompts/: ralph-ccusage-layout-pricing-polish.md  ralph-ccusage-layout-pricing-polish.tasks.md  ralph-ccusage-rust-rewrite.md  ralph-ccusage-rust-rewrite.tasks.md
src/: config.rs  discovery.rs  domain.rs  lib.rs  main.rs  parser.rs  pricing.rs  report.rs  runtime_config.rs
tests/: oracle_daily.rs  parity_blocks.rs  parity_cli.rs  parity_daily.rs  parity_monthly.rs  parity_session.rs  parity_statusline.rs  parity_weekly.rs
tests/fixtures/blocks/basic/: expected.json
tests/fixtures/blocks/malformed/: expected.json
tests/fixtures/cli/daily_breakdown/: expected.txt
tests/fixtures/cli/daily_calculated_cost/: expected.json
tests/fixtures/cli/daily_json_filtered/: expected.json
tests/fixtures/cli/errors/: invalid_since.stderr  inverted_since_until.stderr  unsupported_timezone.stderr
tests/fixtures/cli/human_layouts/: blocks.txt  daily.txt  monthly.txt  session.txt  statusline.txt  weekly.txt
tests/fixtures/cli/session_table_flags/: expected.txt
tests/fixtures/daily/basic/: expected.json
(+22 files in other folders)
